kuberntes assignment 1/nginx-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx-deployment
spec:
  replicas: 3
  selector:
    matchLabels:
      app: nginx-depl 
  template:
    metadata:
      labels:
        app: nginx-depl 
    spec:
      containers:
      - name: nginx
        image: nginx
        ports:
        - containerPort: 80
