kuberntes assignment 1/nginx-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  selector:
    app: nginx-depl
  ports:
  - protocol: TCP
    port: 8080 
    targetPort: 80 
    nodePort: 32325
  type: NodePort
